add notebooks to get retina tuning curves data

--- a/notebooks/fig2.ipynb
+++ b/notebooks/fig2.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,204 @@
     "bio_idx = np.where(data_dict['all_multipliers']==1.)[0][0]\n",
     "\n",
     "chosen_quads = np.array([201, 125, 104, 491])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# utils -----------------------------\n",
+    "\n",
+    "def sum2(data: np.array, axis=1): \n",
+    "    \"\"\"sum over columns (axis 1)\n",
+    "    while keeping data dimensionality\n",
+    "\n",
+    "    Args:\n",
+    "        data (_type_): _description_\n",
+    "        axis (int, optional): _description_. Defaults to 1.\n",
+    "\n",
+    "    Returns:\n",
+    "        _type_: _description_\n",
+    "    \"\"\"\n",
+    "    return data.sum(axis, keepdims=True)\n",
+    "\n",
+    "\n",
+    "def wrap_to_pi(dirs: np.array):\n",
+    "    \"\"\"wrap circularly\n",
+    "\n",
+    "    Args:\n",
+    "        dirs (np.array): directions in radians\n",
+    "\n",
+    "    Returns:\n",
+    "        np.array: directions wrapped circularly\n",
+    "    \"\"\"\n",
+    "    return ((dirs + pi) % (2 * pi) - pi).flatten()\n",
+    "\n",
+    "\n",
+    "def logsumexp(a: np.array, axis=0):\n",
+    "    \"\"\"\n",
+    "    Computes log(sum(exp(a), axis)) while avoiding numerical underflow.\n",
+    "    Equivalent to MATLAB's logsumexp by Tom Minka.\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    a : np.ndarray\n",
+    "        Input array.\n",
+    "    axis : int, optional\n",
+    "        Axis along which to sum. Default is 0.\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    s : np.ndarray\n",
+    "        Log-sum-exp of the input along the specified axis.\n",
+    "    \"\"\"\n",
+    "    # find the maximum along the specified axis (for numerical stability)\n",
+    "    a_max = np.max(a, axis=axis, keepdims=True)\n",
+    "\n",
+    "    # subtract and exponentiate\n",
+    "    a_stable = a - a_max\n",
+    "    s = a_max + log(np.sum(np.exp(a_stable), axis=axis, keepdims=True))\n",
+    "\n",
+    "    # remove the extra dimension\n",
+    "    s = np.squeeze(s, axis=axis)\n",
+    "    a_max = np.squeeze(a_max, axis=axis)\n",
+    "\n",
+    "    # handle non-finite max values (like -inf)\n",
+    "    return np.where(np.isfinite(a_max), s, a_max)\n",
+    "\n",
+    "\n",
+    "#  Neural encoder ----------------------------\n",
+    "\n",
+    "def tuning_curve(x: np.array, pref_dirs: np.array, amplitude=19, width=0.29, baseline=0.01):\n",
+    "    \"\"\"Von-mises like tuning function\n",
+    "    \n",
+    "    Args:\n",
+    "        x (np.array): scalar or array of angles of shape (1, N)\n",
+    "        pref_dirs: \n",
+    "\n",
+    "    Returns: \n",
+    "        array of shape (n_neurons, len(x)) firing rates\n",
+    "    \"\"\" \n",
+    "    # enforce array\n",
+    "    x = np.atleast_1d(x).flatten()\n",
+    "    \n",
+    "    # compute\n",
+    "    tc = amplitude * np.exp((np.cos(x[None,:] - pref_dirs[:,None]) - 1) / width) + baseline\n",
+    "    tc = tc.squeeze() # remove useless first dimension\n",
+    "    \n",
+    "    # enforce 2d with shape (n_neurons, N)\n",
+    "    if tc.ndim == 1: \n",
+    "        tc = np.atleast_2d(tc).T\n",
+    "    return tc\n",
+    "\n",
+    "\n",
+    "def tuning_curve_grad(x: np.array, pref_dirs: np.array, amplitude=19, width=0.29, baseline=0.01):\n",
+    "    \"\"\"\n",
+    "    Gradient of the tuning curve.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    x : array_like\n",
+    "        Input angles (radians)\n",
+    "    pref_dirs : array_like\n",
+    "        Preferred directions of neurons\n",
+    "    tuning_curve : callable or array_like\n",
+    "        Either a function tuning_curve(x) or precomputed array of same shape as x - pref_dirs\n",
+    "    width : float\n",
+    "        Tuning curve width parameter\n",
+    "    \"\"\"\n",
+    "    return -np.sin(x - pref_dirs[:, None]) * tuning_curve(x, pref_dirs, amplitude, width, baseline) / width\n",
+    "\n",
+    "# Information metrics\n",
+    "\n",
+    "def compute_circular_ilocal(x: np.array, xplot: np.array, tc_pms: dict, dx=0.005, nsamp=10000):\n",
+    "    \"\"\"Compute circular ilocal\n",
+    "\n",
+    "    Args:\n",
+    "        x: circular space in radian\n",
+    "        xplot: x points to plot        \n",
+    "        tc_pms (dict): tuning curve parameters\n",
+    "    \n",
+    "    Returns:\n",
+    "        \n",
+    "    \"\"\"\n",
+    "    # limits of gamma to sample. Smaller gamma_min more accurate only if dx is\n",
+    "    # very small (so slower). \n",
+    "    gamma_min = 0.1\n",
+    "    gamma_max = 50\n",
+    "    nxplot = len(xplot) # number of x points to plot\n",
+    "\n",
+    "    # initialise I_local(x) = mean( I_i(x) ), where mean is over samples\n",
+    "    Ilocal = zeros((1, nxplot))\n",
+    "\n",
+    "    # Initialise mean( I_i(x).^2 ), where mean is over samples, useful for err bars\n",
+    "    Ilocal2 = zeros((1, nxplot))\n",
+    "\n",
+    "    # Fisher information\n",
+    "    fisher_info = (tuning_curve_grad(xplot, **tc_pms).T**2./tuning_curve(xplot, **tc_pms).T).sum(1)\n",
+    "\n",
+    "    # compute integral between gamma=0 and gamma=gamma_min analytically\n",
+    "    I0 = log(1 + gamma_min * fisher_info) / 2\n",
+    "\n",
+    "    # average neural response to x\n",
+    "    x_rates = tuning_curve(x, **tc_pms)\n",
+    "\n",
+    "    # index for wrapped gaussian\n",
+    "    k = np.arange(-20,21).reshape(1,1,-1)\n",
+    "\n",
+    "    for i in tqdm(range(nsamp), \"Ilocal\"):\n",
+    "\n",
+    "        # sample gamma from p(gamma)~1/gamma, between gamma_min and gamma_mas\n",
+    "        gamma = exp( rand() * (log(gamma_max) - log(gamma_min)) + log(gamma_min))\n",
+    "\n",
+    "        # sample y~p(y|x), of shape (len(x), )\n",
+    "        y = wrap_to_pi(xplot + sqrt(gamma).T * randn(1,nxplot))\n",
+    "\n",
+    "        # sample r~p(r|y), of shape (n_neurons, len(x))\n",
+    "        r = poisson( tuning_curve(wrap_to_pi(y + sqrt(gamma).T * randn(1,nxplot)), **tc_pms) )\n",
+    "\n",
+    "        # compute log p(r|x)\n",
+    "        logpr_x =  log(x_rates.T) @ r - sum2(x_rates.T) - sum(gammaln(r+1))\n",
+    "\n",
+    "        # compute d p(y|x)/dy, where p(y|x) is wrapped gaussian, of shape (len(x), nxplot)\n",
+    "        dphi = (((x.T-y)[:,:,None] + 2*pi*k) / gamma * exp(-0.5*((x.T-y)[:,:,None] + 2*pi*k)**2 / gamma ) / sqrt(2*pi*gamma)).sum(2)\n",
+    "\n",
+    "        # compute d p(r|y)/dy, of shape (nxplot,)\n",
+    "        dpr_y = sum(exp(logpr_x) * dphi, 0) * dx\n",
+    "\n",
+    "        # compute log p(y|x), where p(y|x) is wrapped gaussian\n",
+    "        logphi = logsumexp(-0.5*((x.T-y)[:,:,None] + 2*pi*k)**2 / gamma - 0.5*log(2*pi*gamma),2)\n",
+    "\n",
+    "        # compute p(r|y)\n",
+    "        logpr_y = logsumexp(logphi + logpr_x + log(dx), 0)\n",
+    "\n",
+    "        # combine, to compute dlogp(r|y) = dp(r|y)/p(r|y)\n",
+    "        dlogpr_y = dpr_y  / exp(logpr_y)\n",
+    "\n",
+    "        # update for Ilocal\n",
+    "        dIlocal = 0.5 * log(gamma_max / gamma_min) * gamma * dlogpr_y**2 + I0\n",
+    "\n",
+    "        # update Ilocal\n",
+    "        Ilocal = Ilocal*(i)/(i+1) + dIlocal/(i+1)\n",
+    "\n",
+    "        # update term for error\n",
+    "        Ilocal2 = Ilocal2*(i)/(i+1) + dIlocal**2/(i+1)\n",
+    "\n",
+    "    # compute information metrics\n",
+    "    Ilocal_err = sqrt(Ilocal2 - Ilocal**2) / sqrt(nsamp)\n",
+    "    Inf_aprx = np.mean(Ilocal)\n",
+    "    Inf_err = sqrt(np.mean(Ilocal_err**2))\n",
+    "    std_err = sqrt(Ilocal2 - Ilocal**2)/sqrt(nsamp)\n",
+    "    return Ilocal, Inf_aprx, Inf_err, std_err, fisher_info, x_rates"
    ]
   },
   {
