--- a/notebooks/fig2_v1.ipynb
+++ b/notebooks/fig2_v1.ipynb
@@ -22,11 +22,7 @@
    "source": [
     "## Setup \n",
     "\n",
-    "Setup \"_fisher_info_limits2_\" virtual environment\n",
-    "\n",
-    "```python\n",
-    "python -m ipykernel install --user --name fisher_info_limits2 --display-name \"fisher_info_limits2\"\n",
-    "```"
+    "Setup \"_fisher_info_limits2_\" virtual environment"
    ]
   },
   {
@@ -345,7 +341,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "6548ad31",
    "metadata": {},
    "outputs": [
@@ -406,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "3335d0ea",
    "metadata": {},
    "outputs": [
@@ -486,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "0241eae4",
    "metadata": {},
    "outputs": [
@@ -560,6 +556,23 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "34a2bdd9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ilocal: 100%|██████████| 10000/10000 [08:41<00:00, 19.17it/s]\n",
+      "Ilocal: 100%|██████████| 10000/10000 [08:30<00:00, 19.60it/s]\n"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "9f302c60",
    "metadata": {},
@@ -569,7 +582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "14009151",
    "metadata": {},
    "outputs": [
@@ -789,7 +802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": null,
    "id": "1fc25c4a",
    "metadata": {},
    "outputs": [
@@ -1106,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "id": "14a79951",
    "metadata": {},
    "outputs": [
