created tuning curves with inputs with arbitrary resolution in radian

--- a/notebooks/fig2_v1.ipynb
+++ b/notebooks/fig2_v1.ipynb
@@ -200,6 +200,66 @@
     "#     return -np.sin(x - pref_dirs[:, None]) * tuning_curve(x, pref_dirs, amplitude, width, baseline) / width\n",
     "\n",
     "\n",
+    "def get_tuning_curves_pms(data:dict, n_neurons=4, example_quad_ix=0, width_ix=34, chosen_quads=np.array([201, 125, 104, 491])):\n",
+    "    \"\"\"get the parameters for each neuron of the specified example quad\n",
+    "    \n",
+    "    Args:\n",
+    "        n_neurons = 4\n",
+    "        example_ix = 0  # example of quad of tuning curves selected\n",
+    "        width_ix = 34   # index of the tuning curve width we work with\n",
+    "    \"\"\"\n",
+    "    prms = dict()\n",
+    "    for neuron_ix in range(n_neurons):\n",
+    "        exple_quad = data['all_quad_pars'][chosen_quads[example_quad_ix], width_ix]           # example quad\n",
+    "        area, pref_dir, width, baseline, flatness = exple_quad[neuron_ix] # tuning curves parameters\n",
+    "        prms[neuron_ix] = {'area': area, 'pref_dir': pref_dir, 'width': width, 'baseline': baseline, 'flatness': flatness}\n",
+    "    return prms\n",
+    "\n",
+    "\n",
+    "def get_flat_topped_von_mises(x, area, pref_dir, width, baseline, flatness):\n",
+    "    '''Modified Von Mises function\\n Parameters Area, mean, concentration, baseline, flatness\\n g = 0 gives Von Mises function'''\n",
+    "    delta_th = x[1]-x[0]\n",
+    "    ftvm_f = np.exp(np.float64((np.cos(np.deg2rad(x-pref_dir-flatness*np.sin(np.deg2rad(x-pref_dir))))-1)/width))\n",
+    "    res = (area*ftvm_f / np.sum(ftvm_f/(len(x)/36)) + baseline) \n",
+    "    return res+np.any(res<0.)*1e10\n",
+    "\n",
+    "\n",
+    "\n",
+    "def tuning_curve(x, prms: dict):\n",
+    "    \"\"\"get tuning curves for many neurons\n",
+    "    with a parameter set per neuron\n",
+    "\n",
+    "    Args:\n",
+    "        x (_type_): _description_\n",
+    "        prms (dict): _description_\n",
+    "\n",
+    "    Returns:\n",
+    "        _type_: _description_\n",
+    "    \"\"\"\n",
+    "    tuning_curves = []\n",
+    "    for ix, _ in enumerate(prms):\n",
+    "        tuning_curves.append(get_flat_topped_von_mises(x, **prms[ix]))\n",
+    "    return np.array(tuning_curves)\n",
+    "\n",
+    "\n",
+    "def tuning_curve_grad(x: np.array, pref_dirs: np.array, amplitude=19, width=0.29, baseline=0.01):\n",
+    "    \"\"\"\n",
+    "    Gradient of the tuning curve.\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    x : array_like\n",
+    "        Input angles (radians)\n",
+    "    pref_dirs : array_like\n",
+    "        Preferred directions of neurons\n",
+    "    tuning_curve : callable or array_like\n",
+    "        Either a function tuning_curve(x) or precomputed array of same shape as x - pref_dirs\n",
+    "    width : float\n",
+    "        Tuning curve width parameter\n",
+    "    \"\"\"\n",
+    "    return -np.sin(x - pref_dirs[:, None]) * tuning_curve(x, pref_dirs, amplitude, width, baseline) / width\n",
+    "\n",
+    "\n",
     "# Information metrics ----------------------------\n",
     "\n",
     "def compute_I_brute_force(x: np.array, xplot: np.array, tc_pms: dict, dx=0.005, nsamp:int=10000):\n",
@@ -365,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "ee5d93ef",
    "metadata": {},
    "outputs": [
@@ -398,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "6548ad31",
    "metadata": {},
    "outputs": [
