--- a/notebooks/study/12_tunings_data_retina.ipynb
+++ b/notebooks/study/12_tunings_data_retina.ipynb
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3a698d59",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,6 @@
     "    return res+np.any(res<0.)*1e10\n",
     "\n",
     "\n",
-    "\n",
     "def get_flat_topped_von_mises(x, area, pref_dir, width, baseline, flatness):\n",
     "    '''Modified Von Mises function\n",
     "    Args: \n",
@@ -191,6 +190,8 @@
     "    Returns:\n",
     "        _type_: _description_\n",
     "    \"\"\"\n",
+    "    x = x.flatten()\n",
+    "    \n",
     "    tuning_curves = []\n",
     "    for neuron_ix, _ in enumerate(prms):\n",
     "        \n",
