compute I and SSi via brute force for retina data

--- a/notebooks/fig2_v1.ipynb
+++ b/notebooks/fig2_v1.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "id": "d509f21b",
    "metadata": {},
    "outputs": [],
@@ -55,7 +55,7 @@
     "dx = 0.005            # smaller dx = slower but more accurate\n",
     "\n",
     "# setup tuning curve parameters\n",
-    "# n_neurons = 20          # number of neurons\n",
+    "n_neurons = 4          # number of neurons is for all examples\n",
     "# tc_pms = {\n",
     "#     \"width\": 0.29,      # tuning curve width\n",
     "#     \"baseline\": 0.01,   # baseline firing rate\n",
@@ -95,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "id": "0cf57536",
    "metadata": {},
    "outputs": [],
@@ -243,6 +243,69 @@
     "\n",
     "# Information metrics ----------------------------\n",
     "\n",
+    "# def compute_I_brute_force(x: np.array, xplot: np.array, tc_pms: dict, dx=0.005, nsamp:int=10000):\n",
+    "#     \"\"\"Compute mutual information (I(R;X)) in a \n",
+    "#     brute force manner\n",
+    "\n",
+    "#     Args:\n",
+    "#         x\n",
+    "#         xplot\n",
+    "#         dx\n",
+    "#         nsamp\n",
+    "#         tc_pms\n",
+    "    \n",
+    "#     Returns:\n",
+    "\n",
+    "#     \"\"\"    \n",
+    "#     # number of directions to plot\n",
+    "#     nxplot = len(xplot)\n",
+    "\n",
+    "#     # initialize ssi and mean squared error\n",
+    "#     ssi = zeros((1, nxplot))\n",
+    "#     mse = zeros((1, nxplot))\n",
+    "\n",
+    "#     # entropy of x\n",
+    "#     Hx = log(2*pi)\n",
+    "\n",
+    "#     # tuning curves\n",
+    "#     x_rates = tuning_curve(x,**tc_pms)\n",
+    "\n",
+    "#     # compute I(X;r)\n",
+    "#     for i in tqdm(range(nsamp),'I brute force'):\n",
+    "\n",
+    "#         # get neural response to directions as spike counts \n",
+    "#         # of shape (n_neurons, nxplot)\n",
+    "#         r = poisson(tuning_curve(xplot,**tc_pms))\n",
+    "\n",
+    "#         # estimate log p(rsamp)\n",
+    "#         logprx =  log(x_rates.T) @ r - sum2(x_rates.T) - sum(gammaln(r+1)) - log(2*pi)\n",
+    "#         logpr = logsumexp(logprx + log(dx), 0)\n",
+    "#         logpx_r = logprx - logpr\n",
+    "\n",
+    "#         # entropy of X|r of shape (1, len(xplot))\n",
+    "#         HX_r = (-sum(exp(logpx_r) * logpx_r, 1) * dx)[None]\n",
+    "\n",
+    "#         # running average of SSI\n",
+    "#         ssi = ssi*(i)/(i+1) + (Hx-HX_r)/(i+1)\n",
+    "\n",
+    "#         # mean square error\n",
+    "#         xtemp = wrap_to_pi(x + 2*pi*rand())\n",
+    "#         xtemp_rates = tuning_curve(xtemp, **tc_pms)\n",
+    "#         logprx = log(xtemp_rates.T) @ r - sum2(xtemp_rates.T) - sum(gammaln(r+1)) - log(2*pi)\n",
+    "#         logpr = logsumexp(logprx + log(dx), 0)\n",
+    "#         logpx_r = logprx - logpr\n",
+    "\n",
+    "#         # of shape (1, len(xplot))\n",
+    "#         xhat = (arctan2(sin(xtemp) @ exp(logpx_r) * dx, cos(xtemp) @ exp(logpx_r) * dx))[None]\n",
+    "        \n",
+    "#         # of shape (1, len(xplot))\n",
+    "#         circular_error = wrap_to_pi(xhat - xplot)**2\n",
+    "        \n",
+    "#         # of shape (1, len(xplot))\n",
+    "#         mse = mse*(i)/(i+1) + circular_error/(i+1)\n",
+    "#     return ssi, mse\n",
+    "\n",
+    "\n",
     "def compute_I_brute_force(x: np.array, xplot: np.array, tc_pms: dict, dx=0.005, nsamp:int=10000):\n",
     "    \"\"\"Compute mutual information (I(R;X)) in a \n",
     "    brute force manner\n",
@@ -268,14 +331,14 @@
     "    Hx = log(2*pi)\n",
     "\n",
     "    # tuning curves\n",
-    "    x_rates = tuning_curve(x,**tc_pms)\n",
+    "    x_rates = tuning_curve(x,tc_pms)\n",
     "\n",
     "    # compute I(X;r)\n",
     "    for i in tqdm(range(nsamp),'I brute force'):\n",
     "\n",
     "        # get neural response to directions as spike counts \n",
     "        # of shape (n_neurons, nxplot)\n",
-    "        r = poisson(tuning_curve(xplot,**tc_pms))\n",
+    "        r = poisson(tuning_curve(xplot,tc_pms))\n",
     "\n",
     "        # estimate log p(rsamp)\n",
     "        logprx =  log(x_rates.T) @ r - sum2(x_rates.T) - sum(gammaln(r+1)) - log(2*pi)\n",
@@ -290,7 +353,7 @@
     "\n",
     "        # mean square error\n",
     "        xtemp = wrap_to_pi(x + 2*pi*rand())\n",
-    "        xtemp_rates = tuning_curve(xtemp, **tc_pms)\n",
+    "        xtemp_rates = tuning_curve(xtemp, tc_pms)\n",
     "        logprx = log(xtemp_rates.T) @ r - sum2(xtemp_rates.T) - sum(gammaln(r+1)) - log(2*pi)\n",
     "        logpr = logsumexp(logprx + log(dx), 0)\n",
     "        logpx_r = logprx - logpr\n",
@@ -304,7 +367,6 @@
     "        # of shape (1, len(xplot))\n",
     "        mse = mse*(i)/(i+1) + circular_error/(i+1)\n",
     "    return ssi, mse\n",
-    "\n",
     "\n",
     "def compute_circular_ilocal(x: np.array, xplot: np.array, tc_pms: dict, dx=0.005, nsamp=10000):\n",
     "    \"\"\"Compute circular ilocal\n",
@@ -406,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "ee5d93ef",
    "metadata": {},
    "outputs": [
@@ -444,7 +506,7 @@
     "example = 0\n",
     "tc_pms = get_tuning_curves_pms_in_rads(data_dict, example_quad_ix=0)\n",
     "\n",
-    "# plot tuning curves\n",
+    "# plot tuning curves for quad example 1\n",
     "plt.figure(figsize=(8, 5))\n",
     "plt.plot(x.flatten(), tuning_curve(x, tc_pms).T, linewidth=1)\n",
     "plt.ylabel('Mean spike count', fontsize=labelsize)\n",
@@ -466,25 +528,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "3335d0ea",
+   "execution_count": 45,
+   "id": "e647e09c",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "I brute force: 100%|██████████| 10000/10000 [00:20<00:00, 493.26it/s]\n",
-      "I brute force: 100%|██████████| 10000/10000 [00:16<00:00, 622.18it/s]\n",
-      "I brute force: 100%|██████████| 10000/10000 [00:16<00:00, 622.14it/s]"
+      "I brute force: 100%|██████████| 10000/10000 [00:16<00:00, 612.45it/s]\n",
+      "I brute force: 100%|██████████| 10000/10000 [00:16<00:00, 595.99it/s]\n",
+      "I brute force: 100%|██████████| 10000/10000 [00:16<00:00, 610.18it/s]\n",
+      "I brute force: 100%|██████████| 10000/10000 [00:16<00:00, 606.78it/s]"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 1min 55s, sys: 52 ms, total: 1min 55s\n",
-      "Wall time: 52.4 s\n"
+      "CPU times: user 1min 5s, sys: 48.1 ms, total: 1min 6s\n",
+      "Wall time: 1min 5s\n"
      ]
     },
     {
@@ -498,40 +561,21 @@
    "source": [
     "%%time\n",
     "\n",
-    "# 20 neurons with high firing rates\n",
-    "n_neurons = 20\n",
-    "pref_dirs = linspace(-pi, pi, n_neurons + 1)[:-1]\n",
-    "pref_dirs = pref_dirs - mean(pref_dirs)\n",
-    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs}\n",
-    "ssi_n20_high, mse_n20_high = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=10000)\n",
+    "# first quad example\n",
+    "tc_pms = get_tuning_curves_pms_in_rads(data_dict, example_quad_ix=0)\n",
+    "ssi_quad1, mse_quad1 = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=10000) \n",
     "\n",
-    "# 4 neurons with high firing rates\n",
-    "n_neurons = 4\n",
-    "pref_dirs = linspace(-pi,pi,n_neurons+1)[:-1] \n",
-    "pref_dirs = pref_dirs - mean(pref_dirs)\n",
-    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs}\n",
-    "ssi_n4_high, mse_n4_high = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=10000)\n",
+    "# second quad example\n",
+    "tc_pms = get_tuning_curves_pms_in_rads(data_dict, example_quad_ix=1)\n",
+    "ssi_quad2, mse_quad2 = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=10000) \n",
     "\n",
-    "# 4 neurons with high firing rates\n",
-    "n_neurons = 4\n",
-    "pref_dirs = linspace(-pi, pi, n_neurons + 1)[:-1]\n",
-    "pref_dirs = pref_dirs - mean(pref_dirs)\n",
-    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 3, \"pref_dirs\": pref_dirs}\n",
-    "ssi_n4_low, mse_n4_low = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=10000)\n",
+    "# third quad example\n",
+    "tc_pms = get_tuning_curves_pms_in_rads(data_dict, example_quad_ix=2)\n",
+    "ssi_quad3, mse_quad3 = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=10000) \n",
     "\n",
-    "# 1 neuron with high firing rates\n",
-    "n_neurons = 1\n",
-    "pref_dirs = linspace(-pi,pi,n_neurons+1)[:-1] \n",
-    "pref_dirs = pref_dirs - mean(pref_dirs)\n",
-    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs}\n",
-    "ssi_n1_high, mse_n1_high = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=10000)\n",
-    "\n",
-    "# 1 neuron with high firing rates\n",
-    "n_neurons = 1\n",
-    "pref_dirs = linspace(-pi, pi, n_neurons + 1)[:-1]\n",
-    "pref_dirs = pref_dirs - mean(pref_dirs)\n",
-    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 3, \"pref_dirs\": pref_dirs}\n",
-    "ssi_n1_low, mse_n1_low = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=10000)"
+    "# fourth quad example\n",
+    "tc_pms = get_tuning_curves_pms_in_rads(data_dict, example_quad_ix=3)\n",
+    "ssi_quad4, mse_quad4 = compute_I_brute_force(x, xplot, tc_pms, dx=dx, nsamp=10000) "
    ]
   },
   {
