--- a/notebooks/fig1.ipynb
+++ b/notebooks/fig1.ipynb
@@ -5,7 +5,7 @@
    "id": "beac91a6",
    "metadata": {},
    "source": [
-    "# $I_{local}$ for 1D tuning \n",
+    "# Info metrics for 1D tuning \n",
     "\n",
     "author: laquitainesteeve@gmail.com from code by Matthew Chalk\n",
     "\n",
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "id": "0cf57536",
    "metadata": {},
    "outputs": [],
@@ -187,6 +187,9 @@
     "        Either a function tuning_curve(x) or precomputed array of same shape as x - pref_dirs\n",
     "    width : float\n",
     "        Tuning curve width parameter\n",
+    "    \n",
+    "    Returns:\n",
+    "        gradient (np.array): shape (n_neurons, n_stimulus)\n",
     "    \"\"\"\n",
     "    return -np.sin(x - pref_dirs[:, None]) * tuning_curve(x, pref_dirs, amplitude, width, baseline) / width\n",
     "\n",
@@ -489,7 +492,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 69,
+   "id": "be8a2c71",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Ilocal: 100%|██████████| 10000/10000 [09:29<00:00, 17.57it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CPU times: user 36min 43s, sys: 1min 23s, total: 38min 6s\n",
+      "Wall time: 23min 17s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "%%time\n",
+    "\n",
+    "# 20 neurons with high firing rate\n",
+    "n_neurons = 20\n",
+    "pref_dirs = linspace(-pi,pi,n_neurons+1)[:-1]\n",
+    "pref_dirs = pref_dirs - mean(pref_dirs)\n",
+    "tc_pms = {\"width\": 0.29, \"baseline\": 0.01, \"amplitude\": 19, \"pref_dirs\": pref_dirs}\n",
+    "\n",
+    "Ilocal_n20_high, _, _, _, fisher_info_n20_high, x_rates_n20_high = compute_circular_ilocal(x, xplot, tc_pms, dx=dx, nsamp=10000)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "0241eae4",
    "metadata": {},
    "outputs": [
