--- a/notebooks/fig1.ipynb
+++ b/notebooks/fig1.ipynb
@@ -5,7 +5,7 @@
    "id": "beac91a6",
    "metadata": {},
    "source": [
-    "# Info metrics for 1D tuning \n",
+    "# Info metrics for MT direction tuning \n",
     "\n",
     "author: laquitainesteeve@gmail.com from code by Matthew Chalk\n",
     "\n",
