--- a/notebooks/fig2.ipynb
+++ b/notebooks/fig2.ipynb
@@ -5,7 +5,7 @@
    "id": "beac91a6",
    "metadata": {},
    "source": [
-    "# Info metrics for retina tuning\n",
+    "# Info metrics for Retina direction tuning\n",
     "\n",
     "author: laquitainesteeve@gmail.com from codes by Carlo Paris and Matthew Chalk\n",
     "\n",
